Recommend accelerator and provide progress feedback while sampling.

--- a/colab/explore_trained_models.ipynb
+++ b/colab/explore_trained_models.ipynb
@@ -208,23 +208,37 @@
         "\n",
         "def gather_samples(n, batch_fun):\n",
         "  data = None\n",
+        "  digits = int(np.log10(n) + 1)\n",
         "  i = 0\n",
-        "  while (data is None) or (len(jax.tree_flatten(data)[0][0]) \u003c n):\n",
+        "  while (data is None) or (len(jax.tree_flatten(data)[0][0]) < n):\n",
         "    new_data = batch_fun(i)\n",
         "    i += 1\n",
         "    if data is None:\n",
         "      data = new_data\n",
         "    else:\n",
         "      data = jax.tree_multimap(lambda a, b: jnp.concatenate((a, b)), data, new_data)\n",
+        "    prefix = ('\\b' * (2 * digits + 3)) if i > 1 else ''\n",
+        "    print(f'{prefix}{len(jax.tree_flatten(data)[0][0]):0{digits}d} / {n}', end='')\n",
+        "  print()\n",
         "  return jax.tree_map(lambda x: x[:n], data)\n",
+        "\n",
+        "if jax.devices()[0].platform == 'cpu':\n",
+        "  print('WARNING: no accelerator found. The model will take a long time to '\n",
+        "        'compute energies and generate model samples, and may crash. \\nA Colab '\n",
+        "        'kernel with a GPU or TPU accelerator is strongly recommended.')\n",
+        "  print()\n",
         "\n",
         "batch_size = closest_power_of_2(32768/num_particles)\n",
         "base_batch_size = batch_size * 32\n",
         "energy_batch_size = closest_power_of_2(8192/num_particles)\n",
         "N = 8192\n",
+        "print('Gathering base samples: ', end='')\n",
         "base_samples, base_logprob = jax.tree_map(np.array, gather_samples(N, lambda i: base_sample_and_logprob(base_params, jax.random.PRNGKey(-i-27), num_samples=base_batch_size)))\n",
+        "print('Computing base energies: ', end='')\n",
         "base_energies = np.array(gather_samples(N, lambda i: potential_energy(base_samples[i*energy_batch_size:(i+1)*energy_batch_size])))\n",
+        "print('Gathering model samples (initial jitting can take some time): ', end='')\n",
         "model_samples, model_logprob = jax.tree_map(np.array, gather_samples(N, lambda i: flow_sample_and_logprob(model_params, jax.random.PRNGKey(i+4200000), num_samples=batch_size)))\n",
+        "print('Computing model energies: ', end='')\n",
         "model_energies = np.array(gather_samples(N, lambda i: potential_energy(model_samples[i*energy_batch_size:(i+1)*energy_batch_size])))"
       ]
     },
