--- a/colab/explore_trained_models.ipynb
+++ b/colab/explore_trained_models.ipynb
@@ -216,7 +216,7 @@
         "    if data is None:\n",
         "      data = new_data\n",
         "    else:\n",
-        "      data = jax.tree_multimap(lambda a, b: jnp.concatenate((a, b)), data, new_data)\n",
+        "      data = jax.tree_map(lambda a, b: jnp.concatenate((a, b)), data, new_data)\n",
         "    prefix = ('\\b' * (2 * digits + 3)) if i > 1 else ''\n",
         "    print(f'{prefix}{len(jax.tree_flatten(data)[0][0]):0{digits}d} / {n}', end='')\n",
         "  print()\n",
