Updated tutorial colab and README

--- a/tutorial/normalizing_flows_for_atomic_solids_tutorial.ipynb
+++ b/tutorial/normalizing_flows_for_atomic_solids_tutorial.ipynb
@@ -8,11 +8,11 @@
       "source": [
         "# Tutorial\n",
         "\n",
-        "The goal of this tutorial colab is to train the normalizing flow model proposed in reference [1] on a small system comprising 8 particles of monatomic water in the cubic ice phase. \n",
+        "The goal of this tutorial colab is to train the normalizing flow model proposed in reference [1] on a small system comprising 8 particles of monatomic water (mW) in the cubic ice phase. \n",
         "\n",
-        "All the relevant code is available on github [2] as supplemental material to the publication but some parts of the logic are missing here and need to be implemented for the model to train.\n",
+        "All the relevant code is available on github [2] as supplemental material to the publication but some parts of the logic are missing here and need to be implemented for the model to train. In particular, in the functions `get_loss`, `get_eval_metrics`, and `get_normalised_target_log_probs` below you have to supply the missing code as specified in the *Todo* field of their docstrings.\n",
         "\n",
-        "Training the model with the hyperparameters (config) below does not require any hardware accelerators and the model should reach an ESS of about 10% on a public CPU kernel in under 10 minutes.\n",
+        "Training the model with the hyperparameters (config) below does not require any hardware accelerators and the model should reach an effective sample size (ESS) of about 10% on a public CPU kernel in under 10 minutes.\n",
         "\n",
         "\n",
         "<br/>\n",
@@ -149,7 +149,7 @@
         "    D(q || p) = {\\langle{\\ln{ q(x)} - \\ln{p(x)}}\\rangle}_q = {\\langle{\\ln{ q(x)} + \\beta U(x)}\\rangle}_q + \\ln{Z}.  \n",
         "\\end{equation}\n",
         "\n",
-        "The last term, $\\ln Z$, is the logarithm of the normalizing constant and it can therefore be ignored as its gradient with respect to the model parameters vanishes. The function $U(x)$ is a given energy function (here the mW potential) and $\\beta = (k_\\text{B} T)^{-1}$ is the inverse temperature with $k_\\text{B}$ being the Boltzmann constant."
+        "The last term, $\\ln Z$, is the logarithm of the normalizing constant and it can be ignored as its gradient with respect to the model parameters vanishes. The function $U(x)$ is a given energy function (here the mW potential) and $\\beta = (k_\\text{B} T)^{-1}$ is the inverse temperature with $k_\\text{B}$ being the Boltzmann constant."
       ]
     },
     {
@@ -564,7 +564,7 @@
     "accelerator": "GPU",
     "colab": {
       "collapsed_sections": [],
-      "name": "Normalizing_flows_for_atomic_solids--Tutorial.ipynb",
+      "name": "normalizing_flows_for_atomic_solids_tutorial.ipynb",
       "toc_visible": true,
       "provenance": []
     },
