Improve documentation, fix a typo and add reference values for the RDF

--- a/tutorial/normalizing_flows_for_atomic_solids_tutorial.ipynb
+++ b/tutorial/normalizing_flows_for_atomic_solids_tutorial.ipynb
@@ -29,7 +29,7 @@
         "\n",
         "[5] Nicoli et al., *Asymptotically unbiased estimation of physical observables with neural samplers*, Phys. Rev. E 101, 023304 (2020), [link](https://journals.aps.org/pre/abstract/10.1103/PhysRevE.101.023304).\n",
         "\n",
-        "[6] Frenkel and Smit, *Understanding Molecular Simulation*, 2nd edition, San Diego (2002), [link](https://www.sciencedirect.com/book/9780122673511/understanding-molecular-simulation)."
+        "[6] Frenkel and Smit, *Understanding molecular simulation*, 2nd edition, San Diego (2002), [link](https://www.sciencedirect.com/book/9780122673511/understanding-molecular-simulation)."
       ]
     },
     {
