Improve documentation, fix a typo and add reference values for the RDF

--- a/tutorial/normalizing_flows_for_atomic_solids_tutorial.ipynb
+++ b/tutorial/normalizing_flows_for_atomic_solids_tutorial.ipynb
@@ -126,7 +126,7 @@
         "# extents of the simulation box.\n",
         "state = config.state\n",
         "\n",
-        "# Defines the number of training steps (the number of parameters updates).\n",
+        "# Defines the number of training steps (parameter updates).\n",
         "num_training_steps=501"
       ]
     },
