Improve documentation, fix a typo and add reference values for the RDF

--- a/tutorial/normalizing_flows_for_atomic_solids_tutorial.ipynb
+++ b/tutorial/normalizing_flows_for_atomic_solids_tutorial.ipynb
@@ -448,9 +448,9 @@
         "\n",
         "The flow model is a probability distribution $q$ that is related to the base density $b$ via a diffeomorphism $f$. We can sample from $q$ by first sampling $z$ from $b$ and then taking $x = f(z)$. The probability density of `x` is given by\n",
         "\n",
-        "\\begin{equation}\n",
+        "\\begin{equation*}\n",
         "    q(x) = b(z)|\\det J_f(z)|^{-1},\n",
-        "\\end{equation}\n",
+        "\\end{equation*}\n",
         "\n",
         "where $J_f$ is the Jacobian of $f$. \n",
         "\n",
@@ -497,7 +497,7 @@
         "\\ln p(x) = -\\beta U(x) - \\ln Z,\n",
         "\\end{equation*}\n",
         "\n",
-        "we need the exact value of $\\ln Z$, which is unknown. However, we have a targeted estimate, $\\widehat{\\ln Z}$, that we can use to compute approximately normalised target log probs,\n",
+        "we need the exact value of $\\ln Z$, which is unknown. However, we can use our targeted estimate, $\\widehat{\\ln Z}$, to compute approximately normalised target log probs,\n",
         "\n",
         "\\begin{equation*}\n",
         "\\ln \\hat p(x) = -\\beta U(x) - \\widehat{\\ln Z}.\n",
@@ -739,7 +739,7 @@
       "collapsed_sections": [
         "YEytVau8d_8y"
       ],
-      "name": "Updates: normalizing_flows_for_atomic_solids_tutorial.ipynb",
+      "name": "normalizing_flows_for_atomic_solids_tutorial.ipynb",
       "provenance": [],
       "toc_visible": true
     },
