Fix typo in tutorial

--- a/tutorial/normalizing_flows_for_atomic_solids_tutorial.ipynb
+++ b/tutorial/normalizing_flows_for_atomic_solids_tutorial.ipynb
@@ -446,7 +446,7 @@
         "### Sampling from the model\n",
         "\n",
         "\n",
-        "The flow model is a probability distribution $q$ that is related to the base density $b$ via a diffeomorphism $f$. We can sample from $q$ by first sampling $z$ from $b$ and then taking $x = f(z)$. The probability density of `x` is given by\n",
+        "The flow model is a probability distribution $q$ that is related to the base density $b$ via a diffeomorphism $f$. We can sample from $q$ by first sampling $z$ from $b$ and then taking $x = f(z)$. The probability density of $x$ is given by\n",
         "\n",
         "\\begin{equation*}\n",
         "    q(x) = b(z)|\\det J_f(z)|^{-1},\n",
